--- a/src/App.css
+++ b/src/App.css
@@ -2,24 +2,13 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  /* justify-content: center; */
   font-size: calc(10px + 2vmin);
   color: white;
 }
@@ -28,11 +17,31 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn {
+  margin-top: 50px;
+  background-color: palevioletred;
+  border: 2px solid salmon;
+  border-radius: 5px;
+  padding: 20px 25px;
+  font-size: 120%;
+  transition: 0.5s;
+}
+
+.btn:hover {
+  box-shadow: 0px 0px 10px palevioletred;
+}
+
+.btn:active {
+  border: 4px solid #61dafb;
+}
+
+.charImg {
+  width: 200px;
+  height: auto;
+  border-radius: 5px;
+  box-shadow: 0px 0px 15px whitesmoke;
+}
+
+.container {
+  text-transform: capitalize;
 }
